@@ -7,6 +7,8 @@ TODO:
 - bird and netsnmp don't build with more than one job
 - deco
 
+revision 109/110:
+- delete/add 250-orangebox.sh (with chmod +x)
 revision 108:
 - hide depmod output
 revision 107:
